--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFF5F5"
     tools:context=".MainActivity">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="421dp"
-            android:layout_height="261dp"
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="409dp"
+            android:layout_height="259dp"
+            android:background="@drawable/gredient_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/image2" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -30,8 +31,7 @@
             android:layout_width="246dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
-            android:background="#37262F"
-            android:text="tareq khanfar"
+            android:text="Tareq khanfar"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="30dp"
@@ -56,12 +56,12 @@
                         <TextView
                             android:id="@+id/name"
                             style="@style/TextViewForMyProfile"
-                            android:layout_width="128dp"
+                            android:layout_width="137dp"
                             android:layout_height="54dp"
                             android:layout_marginTop="20dp"
-
-
-                            android:text="Name" />
+                            android:background="#497174"
+                            android:text="Name"
+                            android:textColor="@color/white" />
 
                         <EditText
 
@@ -69,8 +69,8 @@
                             style="@style/editTextForMyProfile"
                             android:layout_width="300dp"
                             android:layout_marginTop="20dp"
-
                             android:layout_height="40dp"
+                            android:background="#D6E4E5"
 
                             />
 
@@ -87,6 +87,8 @@
                             android:layout_width="168dp"
                             android:layout_height="54dp"
                             android:layout_weight="1"
+                            android:background="#497174"
+                            android:textColor="@color/white"
                             android:text="userName" />
 
                         <EditText
@@ -94,7 +96,9 @@
                             style="@style/editTextForMyProfile"
                             android:layout_width="300dp"
                             android:layout_height="40dp"
-android:id="@+id/EditUserName"
+                            android:background="#D6E4E5"
+
+                            android:id="@+id/EditUserName"
                             android:layout_weight="1" />
 
                 </LinearLayout>
@@ -108,6 +112,8 @@ android:id="@+id/EditUserName"
                             style="@style/TextViewForMyProfile"
                             android:layout_width="168dp"
                             android:layout_height="54dp"
+                            android:background="#497174"
+                            android:textColor="@color/white"
                             android:layout_weight="1"
                             android:text="Email" />
 
@@ -115,11 +121,14 @@ android:id="@+id/EditUserName"
 
                             style="@style/editTextForMyProfile"
                             android:layout_width="300dp"
+                            android:background="#D6E4E5"
+
                             android:layout_height="40dp"
 android:id="@+id/EditEmail"
                             android:layout_weight="1" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -130,6 +139,8 @@ android:id="@+id/EditEmail"
                             style="@style/TextViewForMyProfile"
                             android:layout_width="168dp"
                             android:layout_height="54dp"
+                            android:background="#497174"
+                            android:textColor="@color/white"
                             android:layout_weight="1"
                             android:text="Address" />
 
@@ -138,7 +149,9 @@ android:id="@+id/EditEmail"
                             style="@style/editTextForMyProfile"
                             android:layout_width="300dp"
                             android:layout_height="40dp"
-android:id="@+id/EditAddress"
+                            android:background="#D6E4E5"
+
+                            android:id="@+id/EditAddress"
                             android:layout_weight="1" />
 
                 </LinearLayout>
@@ -151,6 +164,8 @@ android:id="@+id/EditAddress"
                             android:id="@+id/phone"
                             style="@style/TextViewForMyProfile"
                             android:layout_width="168dp"
+                            android:background="#497174"
+                            android:textColor="@color/white"
                             android:layout_height="54dp"
                             android:layout_weight="1"
                             android:text="Phone" />
@@ -160,7 +175,9 @@ android:id="@+id/EditAddress"
                             style="@style/editTextForMyProfile"
                             android:layout_width="300dp"
                             android:layout_height="40dp"
-android:id="@+id/EditPhone"
+                            android:background="#D6E4E5"
+
+                            android:id="@+id/EditPhone"
                             android:layout_weight="1" />
 
                 </LinearLayout>
@@ -169,6 +186,8 @@ android:id="@+id/EditPhone"
       android:id="@+id/changePassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#D6E4E5"
+
                     android:text="Change My Password" />
 
                 <Button
@@ -176,14 +195,13 @@ android:id="@+id/EditPhone"
                     style="@style/editTextForMyProfile"
                     android:layout_width="match_parent"
                     android:layout_height="92dp"
-
+ android:background="@drawable/radius_btn"
                     android:layout_margin="40dp"
 
                     android:shadowColor="#FF0909"
                     android:text="Edit Info" />
 
         </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
