--- a/app/src/main/res/layout/notifaction.xml
+++ b/app/src/main/res/layout/notifaction.xml
@@ -2,14 +2,14 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#BDBDBD"
+    android:background="@drawable/gredient_color"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
-        android:layout_width="309dp"
-        android:layout_height="281dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         />
 
