--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -21,7 +21,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#5D539A">
+                android:background="@color/itemBackground">
 
                 <ImageView
                     android:id="@+id/myImage"
@@ -39,7 +39,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="5dp"
                     android:text="Laptop"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textColor"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/myImage"
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="light and easy to use"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@+id/myText1"
                     app:layout_constraintTop_toBottomOf="@+id/myText1" />
@@ -64,10 +64,10 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="62dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
                     android:src="@drawable/fave"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
