--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/profileImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="80dp"
@@ -30,16 +30,15 @@
             android:id="@+id/MainName"
             android:layout_width="246dp"
             android:layout_height="60dp"
-            android:layout_marginTop="20dp"
-android:fontFamily="@font/changa"
+            android:fontFamily="@font/changa"
             android:text="Tareq khanfar"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="30dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView6"
+            app:layout_constraintEnd_toEndOf="@+id/profileImage"
             app:layout_constraintHorizontal_bias="0.506"
-            app:layout_constraintStart_toStartOf="@+id/imageView6"
-            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+            app:layout_constraintStart_toStartOf="@+id/profileImage"
+            app:layout_constraintTop_toBottomOf="@+id/profileImage" />
 
         <LinearLayout
             android:layout_width="409dp"
