--- a/app/src/main/res/layout/info_customer.xml
+++ b/app/src/main/res/layout/info_customer.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/image_info"
+        android:layout_gravity="center"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="80dp"
