--- a/app/src/main/res/layout/my_profile.xml
+++ b/app/src/main/res/layout/my_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFF5F5"
-    tools:context=".MainActivity">
+    tools:context=".MyProfile">
 
         <TextView
             android:id="@+id/textView4"
