--- a/app/src/main/res/layout/my_profile.xml
+++ b/app/src/main/res/layout/my_profile.xml
@@ -55,10 +55,10 @@
                         <TextView
                             android:id="@+id/name"
                             style="@style/TextViewForMyProfile"
-                            android:layout_width="137dp"
-                            android:layout_height="54dp"
+                            android:layout_width="123dp"
+                            android:layout_height="42dp"
                             android:layout_marginTop="20dp"
-                            android:background="#497174"
+                            android:background="@color/purple_500"
                             android:text="Name"
                             android:textColor="@color/white" />
 
@@ -66,9 +66,10 @@
 
                             android:id="@+id/EditName"
                             style="@style/editTextForMyProfile"
-                            android:layout_width="300dp"
                             android:layout_marginTop="20dp"
                             android:layout_height="40dp"
+                            android:layout_width="300dp"
+
                             android:background="#D6E4E5"
 
                             />
@@ -77,24 +78,26 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="73dp"
                     android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/userName"
                             style="@style/TextViewForMyProfile"
-                            android:layout_width="168dp"
-                            android:layout_height="54dp"
+                            android:layout_width="140dp"
+                            android:layout_height="42dp"
+                            android:layout_marginTop="20dp"
                             android:layout_weight="1"
-                            android:background="#497174"
+                            android:background="@color/purple_500"
                             android:textColor="@color/white"
                             android:text="userName" />
 
                         <EditText
 
                             style="@style/editTextForMyProfile"
-                            android:layout_width="300dp"
+                            android:layout_marginTop="20dp"
                             android:layout_height="40dp"
+                            android:layout_width="300dp"
                             android:background="#D6E4E5"
 
                             android:id="@+id/EditUserName"
@@ -109,9 +112,11 @@
                         <TextView
                             android:id="@+id/email"
                             style="@style/TextViewForMyProfile"
-                            android:layout_width="168dp"
-                            android:layout_height="54dp"
-                            android:background="#497174"
+                            android:layout_width="140dp"
+                            android:layout_height="42dp"
+                            android:layout_marginTop="20dp"
+
+                            android:background="@color/purple_500"
                             android:textColor="@color/white"
                             android:layout_weight="1"
                             android:text="Email" />
@@ -119,10 +124,11 @@
                         <EditText
 
                             style="@style/editTextForMyProfile"
-                            android:layout_width="300dp"
                             android:background="#D6E4E5"
 
+                            android:layout_marginTop="20dp"
                             android:layout_height="40dp"
+                            android:layout_width="300dp"
 android:id="@+id/EditEmail"
                             android:layout_weight="1" />
 
@@ -136,9 +142,11 @@ android:id="@+id/EditEmail"
                         <TextView
                             android:id="@+id/address"
                             style="@style/TextViewForMyProfile"
-                            android:layout_width="168dp"
-                            android:layout_height="54dp"
-                            android:background="#497174"
+                            android:layout_width="140dp"
+                            android:layout_height="42dp"
+                            android:layout_marginTop="20dp"
+
+                            android:background="@color/purple_500"
                             android:textColor="@color/white"
                             android:layout_weight="1"
                             android:text="Address" />
@@ -146,8 +154,9 @@ android:id="@+id/EditEmail"
                         <EditText
 
                             style="@style/editTextForMyProfile"
-                            android:layout_width="300dp"
+                            android:layout_marginTop="20dp"
                             android:layout_height="40dp"
+                            android:layout_width="300dp"
                             android:background="#D6E4E5"
 
                             android:id="@+id/EditAddress"
@@ -162,18 +171,21 @@ android:id="@+id/EditEmail"
                         <TextView
                             android:id="@+id/phone"
                             style="@style/TextViewForMyProfile"
-                            android:layout_width="168dp"
-                            android:background="#497174"
+                            android:background="@color/purple_500"
                             android:textColor="@color/white"
-                            android:layout_height="54dp"
+                            android:layout_width="140dp"
+                            android:layout_height="42dp"
+                            android:layout_marginTop="20dp"
+
                             android:layout_weight="1"
                             android:text="Phone" />
 
                         <EditText
 
                             style="@style/editTextForMyProfile"
-                            android:layout_width="300dp"
+                            android:layout_marginTop="20dp"
                             android:layout_height="40dp"
+                            android:layout_width="300dp"
                             android:background="#D6E4E5"
 
                             android:id="@+id/EditPhone"
@@ -186,18 +198,21 @@ android:id="@+id/EditEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#D6E4E5"
-
+                    android:textColor="@color/purple_500"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:fontFamily="sans-serif-condensed"
                     android:text="Change My Password" />
 
                 <Button
                     android:id="@+id/editInfo"
                     style="@style/editTextForMyProfile"
-                    android:layout_width="match_parent"
-                    android:layout_height="92dp"
- android:background="@drawable/radius_btn"
+                    android:layout_gravity="center"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                 android:background="#b22222"
+                    android:textColor="@color/white"
                     android:layout_margin="40dp"
-
-                    android:shadowColor="#FF0909"
                     android:text="Edit Info" />
 
         </LinearLayout>
