--- a/app/src/main/res/layout/popup_create_password.xml
+++ b/app/src/main/res/layout/popup_create_password.xml
@@ -2,7 +2,6 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#D6E4E5"
     android:layout_height="match_parent">
 
 
@@ -12,7 +11,7 @@
         android:textSize="18dp"
         android:textAlignment="center"
         android:gravity="center"
-        android:background="#497174"
+        android:background="@color/purple_500"
 
         android:textColor="@color/white"
         android:layout_margin="30dp"
@@ -25,7 +24,9 @@
         android:textSize="18dp"
         android:textAlignment="center"
         android:layout_margin="30dp"
+
         android:hint="Enter Old Password"
+        android:textColor="@color/purple_500"
         android:inputType="textPassword"
         />
     <EditText
@@ -33,6 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:textSize="18dp"
+        android:textColor="@color/purple_500"
+
         android:textAlignment="center"
         android:layout_margin="30dp"
         android:hint="Enter new Password"
@@ -43,6 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:textSize="18dp"
+        android:textColor="@color/purple_500"
+
         android:textAlignment="center"
         android:layout_margin="30dp"
         android:hint="Enter new Password"
@@ -57,11 +62,14 @@
 
         <Button
             android:id="@+id/savePassword"
-            android:layout_width="281dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/radius_btn"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:layout_marginBottom="60dp"
+            android:layout_marginLeft="85dp"
+            android:background="@color/purple_500"
             android:text="Save"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:textSize="18dp"
 
